# twitch_firetvappstate

./: .gitignore  .pre-commit-config.yaml  .pylintrc  Dockerfile.dev  README.md  REUSE.toml  pyproject.toml  requirements.txt  requirements_test.txt
.devcontainer/: bootstrap  devcontainer.json  setup
.github/workflows/: release.yml
examples/: is_playback_active.md  is_twitch_running.md  which_channel_active.md
twitch_firetvappstate/: __init__.py  handshake.py  twitch_playback.py
